--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^3.3.1",
     "flowbite-datepicker": "^1.2.6",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "next": "14.0.4",
     "react": "^18",
     "react-day-picker": "^8.10.0",
