--- a/package.json
+++ b/package.json
@@ -13,18 +13,20 @@
     "@material-tailwind/react": "^2.1.9",
     "@radix-ui/react-icons": "^1.3.1",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "date-fns": "^3.3.1",
+    "date-fns": "^3.6.0",
     "flowbite-datepicker": "^1.2.6",
     "lucide-react": "^0.454.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "next": "14.0.4",
     "react": "^18",
-    "react-day-picker": "^8.10.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "tailwind-datepicker-react": "^1.4.3",
     "tailwind-merge": "^2.5.4",
