--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
+    "swr": "^2.2.5",
     "tailwind-datepicker-react": "^1.4.3",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
