--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_XRapidAPIKey= 
-NEXT_PUBLIC_XRapidAPIHost= api-nba-v1.p.rapidapi.com
+XRapidAPIKey= 
+XRapidAPIHost= api-nba-v1.p.rapidapi.com
