--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "flowbite-datepicker": "^1.2.6",
     "lucide-react": "^0.454.0",
     "next": "14.0.4",
+    "next-themes": "^0.4.4",
     "react": "^19",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19",
+    "react-icons": "^5.4.0",
     "swr": "^2.2.5",
     "tailwind-datepicker-react": "^1.4.3",
     "tailwind-merge": "^2.5.4",
