--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
+    "@tanstack/react-query": "^5.64.1",
+    "@trpc/client": "^11.0.0-rc.700",
+    "@trpc/react-query": "^11.0.0-rc.700",
+    "@trpc/server": "^11.0.0-rc.700",
     "class-variance-authority": "^0.7.0",
+    "client-only": "^0.0.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "flowbite-datepicker": "^1.2.6",
@@ -30,10 +35,13 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^19",
     "react-icons": "^5.4.0",
+    "server-only": "^0.0.1",
+    "superjson": "^2.2.2",
     "swr": "^2.2.5",
     "tailwind-datepicker-react": "^1.4.3",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^20",
