set up express server to call api, scaffold frontend to call the backend

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,12 @@
     "strict": true,
     "lib": ["ES2020", "DOM"],
     "esModuleInterop": true,
+    "jsx": "preserve",
     "skipLibCheck": true
+  },
+  "ts-node": {
+    "compilerOptions": {
+      "module": "commonjs"
+    }
   }
 }
