--- a/package.json
+++ b/package.json
@@ -2,29 +2,30 @@
   "name": "nba-scores",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "serve": "ts-node-dev server/server.ts"
+    "serve": "ts-node-dev server/index.ts"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.1",
     "@tanstack/react-query": "^5.64.2",
     "@tanstack/react-query-devtools": "^5.64.2",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
-    
-    "fastify": "^5.2.1",
+    "express": "^4.21.2",
+    "node-fetch": "2",
     "react": "^18.3.1",
+    "react-day-picker": "^9.5.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@tanstack/eslint-plugin-query": "^5.64.2",
     "@types/cors": "^2.8.17",
-    
+    "@types/express": "^5.0.0",
     "@types/node": "^22.10.7",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
@@ -35,7 +36,7 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "postcss": "^8.5.1",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.0",
     "ts-node-dev": "^2.0.0",
     "tsup": "^8.3.5",
     "typescript": "^5.7.3",
