add query param with date to frontend url

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,11 @@
     "lib": ["ES2020", "DOM"],
     "esModuleInterop": true,
     "jsx": "preserve",
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
   "ts-node": {
     "compilerOptions": {
