--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "node-fetch": "2",
     "react": "^18.3.1",
     "react-day-picker": "^9.5.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router": "^7.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
