--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "serve": "ts-node-dev server/index.ts"
   },
   "dependencies": {
+    "@adobe/react-spectrum": "^3.39.0",
+    "@spectrum-icons/workflow": "^4.2.17",
     "@tailwindcss/vite": "^4.0.1",
     "@tanstack/react-query": "^5.64.2",
     "@tanstack/react-query-devtools": "^5.64.2",
@@ -18,8 +20,11 @@
     "express": "^4.21.2",
     "node-fetch": "2",
     "react": "^18.3.1",
+    "react-aria": "^3.37.0",
+    "react-aria-components": "^1.6.0",
     "react-day-picker": "^9.5.1",
     "react-dom": "^18.3.1",
+    "react-nba-logos": "^1.1.3",
     "react-router": "^7.1.5"
   },
   "devDependencies": {
