--- a/package.json
+++ b/package.json
@@ -1,50 +1,53 @@
 {
   "name": "nba-scores",
-  "version": "0.1.0",
   "private": true,
+  "version": "0.0.0",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "mock-api": "npx ts-node MockApiResponse.mjs",
-    "call-api": "npx ts-node CallApi.mjs"
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview",
+    "serve": "ts-node-dev server/index.ts"
   },
   "dependencies": {
-    "@heroicons/react": "^2.1.1",
-    "@material-tailwind/react": "^2.1.9",
-    "@radix-ui/react-icons": "^1.3.1",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-popover": "^1.1.2",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-switch": "^1.1.1",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "date-fns": "^3.6.0",
-    "flowbite-datepicker": "^1.2.6",
-    "lucide-react": "^0.454.0",
-    "next": "14.0.4",
-    "next-themes": "^0.4.4",
-    "react": "^19",
-    "react-day-picker": "^8.10.1",
-    "react-dom": "^19",
-    "react-icons": "^5.4.0",
-    "swr": "^2.2.5",
-    "tailwind-datepicker-react": "^1.4.3",
-    "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "@adobe/react-spectrum": "^3.39.0",
+    "@spectrum-icons/workflow": "^4.2.17",
+    "@tailwindcss/vite": "^4.0.1",
+    "@tanstack/react-query": "^5.64.2",
+    "@tanstack/react-query-devtools": "^5.64.2",
+    "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
+    "express": "^4.21.2",
+    "node-fetch": "2",
+    "react": "^18.3.1",
+    "react-aria": "^3.37.0",
+    "react-aria-components": "^1.6.0",
+    "react-day-picker": "^9.5.1",
+    "react-dom": "^18.3.1",
+    "react-nba-logos": "^1.1.3",
+    "react-router": "^7.1.5",
+    "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-datepicker": "^6.0.1",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "@eslint/js": "^9.17.0",
+    "@tanstack/eslint-plugin-query": "^5.64.2",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.10.7",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.17.0",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.16",
+    "globals": "^15.14.0",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^4.0.9",
+    "ts-node-dev": "^2.0.0",
+    "tsup": "^8.3.5",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.18.2",
+    "vite": "^6.0.5"
   }
 }
