--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "target": "ES2017",
-    "module": "Node16",
-    "moduleResolution": "node16",
+    "module": "ES2022",
+    "moduleResolution": "node",
     "outDir": "./dist",
     "strict": true,
     "lib": ["ES2020", "DOM"],
