--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "nba-scores",
   "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "serve": "ts-node-dev server/index.ts"
+    "serve": "node --loader ts-node/esm server/index.ts"
   },
   "dependencies": {
     "@adobe/react-spectrum": "^3.39.0",
@@ -26,7 +27,8 @@
     "react-dom": "^18.3.1",
     "react-nba-logos": "^1.1.3",
     "react-router": "^7.1.5",
-    "react-router-dom": "^7.1.5"
+    "react-router-dom": "^7.1.5",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -44,6 +46,7 @@
     "globals": "^15.14.0",
     "postcss": "^8.5.1",
     "tailwindcss": "^4.0.9",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsup": "^8.3.5",
     "typescript": "^5.7.3",
