--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "target": "ES2017",
-    "module": "ES2022",
-    "moduleResolution": "node",
+    "module": "NodeNext",
+    "moduleResolution": "nodenext",
     "outDir": "./dist",
     "strict": true,
     "lib": ["ES2020", "DOM"],
@@ -14,9 +14,9 @@
       "@/*": ["./src/*"]
     }
   },
-  "ts-node": {
-    "compilerOptions": {
-      "module": "commonjs"
-    }
-  }
+  // "ts-node": {
+  //   "compilerOptions": {
+  //     "module": "commonjs"
+  //   }
+  // }
 }
