--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "target": "ES2017",
-    "module": "NodeNext",
-    "moduleResolution": "nodenext",
+    "module": "ES2020",
+    "moduleResolution": "bundler",
     "outDir": "./dist",
     "strict": true,
     "lib": ["ES2020", "DOM"],
