--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "serve": "node --loader ts-node/esm server/index.ts"
+    "serve": "wrangler dev",
+    "deploy": "wrangler deploy"
   },
   "dependencies": {
     "@adobe/react-spectrum": "^3.39.0",
@@ -19,6 +20,7 @@
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "express": "^4.21.2",
+    "hono": "4.7.5",
     "node-fetch": "2",
     "react": "^18.3.1",
     "react-aria": "^3.37.0",
@@ -28,7 +30,8 @@
     "react-nba-logos": "^1.1.3",
     "react-router": "^7.1.5",
     "react-router-dom": "^7.1.5",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "wrangler": "^4.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
