--- a/package.json
+++ b/package.json
@@ -17,11 +17,10 @@
     "@tailwindcss/vite": "^4.0.1",
     "@tanstack/react-query": "^5.64.2",
     "@tanstack/react-query-devtools": "^5.64.2",
-    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
-    "express": "^4.21.2",
     "hono": "4.7.5",
     "node-fetch": "2",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-aria": "^3.37.0",
     "react-aria-components": "^1.6.0",
@@ -36,8 +35,6 @@
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@tanstack/eslint-plugin-query": "^5.64.2",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0",
     "@types/node": "^22.10.7",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
