--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@tanstack/react-query": "^5.64.2",
     "@tanstack/react-query-devtools": "^5.64.2",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.15.0",
     "hono": "4.7.5",
+    "lucide-react": "^0.511.0",
     "node-fetch": "2",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
