--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "serve": "wrangler dev",
-    "deploy": "wrangler deploy"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@adobe/react-spectrum": "^3.39.0",
@@ -19,7 +17,6 @@
     "@tanstack/react-query-devtools": "^5.64.2",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.15.0",
-    "hono": "4.7.5",
     "lucide-react": "^0.511.0",
     "node-fetch": "2",
     "prop-types": "^15.8.1",
@@ -28,11 +25,9 @@
     "react-aria-components": "^1.6.0",
     "react-day-picker": "^9.5.1",
     "react-dom": "^18.3.1",
-    "react-nba-logos": "^1.1.3",
     "react-router": "^7.1.5",
     "react-router-dom": "^7.1.5",
-    "vite-tsconfig-paths": "^5.1.4",
-    "wrangler": "^4.7.0"
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
