--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@adobe/react-spectrum": "^3.39.0",
+    "@internationalized/date": "^3.11.0",
     "@spectrum-icons/workflow": "^4.2.17",
     "@tailwindcss/vite": "^4.0.1",
     "@tanstack/react-query": "^5.64.2",
